--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "node": ">=8.10"
   },
   "dependencies": {
+    "body-parser": "^1.19.0",
     "docusign-esign": "^4.2.1",
     "dotenv": "^8.0.0",
     "express": "^4.16.4",
